--- a/Lesson1/Ciphers/Exercise/src/main/resources/vop/primary.fxml
+++ b/Lesson1/Ciphers/Exercise/src/main/resources/vop/primary.fxml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vop.PrimaryController">
 
+
+<AnchorPane prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vop.PrimaryController">
+   <children>
+      <Label layoutX="57.0" layoutY="74.0" text="Besked" />
+      <TextField fx:id="besked" layoutX="180.0" layoutY="70.0" />
+      <RadioButton fx:id="bash" layoutX="168.0" layoutY="139.0" mnemonicParsing="false" text="Atbash" />
+      <RadioButton fx:id="caesar" layoutX="366.0" layoutY="139.0" mnemonicParsing="false" text="Caesar" />
+      <Spinner fx:id="spinner" layoutX="464.0" layoutY="135.0" />
+      <Button fx:id="krypter" layoutX="71.0" layoutY="248.0" mnemonicParsing="false" onAction="#krypter" text="Krypter" />
+      <Button fx:id="dekrypter" layoutX="71.0" layoutY="355.0" mnemonicParsing="false" onAction="#dekrypter" text="Dekrypter" />
+      <TextField fx:id="output1" layoutX="168.0" layoutY="248.0" />
+      <TextField fx:id="output2" layoutX="168.0" layoutY="368.0" />
+   </children>
 </AnchorPane>
