--- a/Lesson2/SearchAndReplace/Exercise/src/main/resources/vop/primary.fxml
+++ b/Lesson2/SearchAndReplace/Exercise/src/main/resources/vop/primary.fxml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vop.PrimaryController">
 
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vop.PrimaryController">
+   <children>
+      <Label layoutX="83.0" layoutY="64.0" text="Søg" />
+      <Label layoutX="272.0" layoutY="64.0" text="Erstat" />
+      <TextField fx:id="søgField" layoutX="23.0" layoutY="99.0" />
+      <TextField fx:id="erstatField" layoutX="212.0" layoutY="99.0" />
+      <Button fx:id="replaceAllButton" accessibleRoleDescription="t h" layoutX="465.0" layoutY="99.0" mnemonicParsing="false" onAction="#replaceAll" text="Replace All" />
+      <TextArea fx:id="textArea" layoutX="22.0" layoutY="161.0" prefHeight="200.0" prefWidth="342.0" promptText="Enter Text Here" />
+      <Button fx:id="openFileButton" layoutX="477.0" layoutY="200.0" mnemonicParsing="false" onAction="#openFile" text="Åben Fil" />
+      <Button fx:id="saveButton" layoutX="477.0" layoutY="298.0" mnemonicParsing="false" onAction="#saveFile" text="Gem Som" />
+   </children>
 </AnchorPane>
